MINOR: trivial cleanups
- Reformat header: `CustomDeserializerTest`, `ReplicaVerificationToolTest`
- Remove unused constructor: `ConsumerGroupDescription`
- Remove unused variables in `TimeOrderedKeyValueBufferTest#shouldRestoreV2Format`
- Remove deprecated `Number` consturctor calls; use `Number#valueOf` instread.

Author: Lee Dongjin <dongjin@apache.org>

Reviewers: Stanislav Kozlovski <stanislav_kozlovski@outlook.com>, Manikumar Reddy <manikumar.reddy@gmail.com>

Closes #7202 from dongjinleekr/cleanup/201908